--- a/src/ProjectTemplates/Web.ProjectTemplates/StarterWeb-FSharp.fsproj.in
+++ b/src/ProjectTemplates/Web.ProjectTemplates/StarterWeb-FSharp.fsproj.in
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="${MicrosoftAspNetCoreMvcNewtonsoftJsonPackageVersion}" />
+    <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="${MicrosoftWebLibraryManagerBuildPackageVersion}" />
   </ItemGroup>
 
 </Project>
