--- a/src/SignalR/perf/benchmarkapps/BenchmarkServer/BenchmarkServer.csproj
+++ b/src/SignalR/perf/benchmarkapps/BenchmarkServer/BenchmarkServer.csproj
@@ -22,6 +22,7 @@
   <ItemGroup Condition="'$(BenchmarksTargetFramework)' != ''">
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="$(MicrosoftAspNetCoreAppPackageVersion)" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.StackExchangeRedis" Version="$(MicrosoftAspNetCoreAppPackageVersion)" />
+    <ProjectReference Include="..\..\..\common\Protocols.Json\Microsoft.AspNetCore.SignalR.Protocols.Json.csproj" />
 
     <KnownFrameworkReference Update="Microsoft.AspNetCore.App"
       DefaultRuntimeFrameworkVersion="$(BenchmarksAspNetCoreVersion)"
